--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Anton|Overpass');
+
 body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  background: #3b89df;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
